force-app/main/default/objects/Case/fields/FOPS_Billable__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Billable__c</fullName>
    <inlineHelpText>Support work outside contracted scope. Most freelancers give this away unmeasured.</inlineHelpText>
    <label>Billable</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>