force-app/main/default/objects/Case/fields/FOPS_Contract__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Contract__c</fullName>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>FOPS_Cases</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <type>Lookup</type>
</CustomField>