force-app/main/default/objects/Case/fields/FOPS_Impact__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Impact__c</fullName>
    <label>Impact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Blocking</fullName>
            </value>
            <value>
                <fullName>Degraded</fullName>
            </value>
            <value>
                <fullName>Informational</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>