force-app/main/default/objects/Case/fields/FOPS_Order__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Order__c</fullName>
    <label>Invoice (Order)</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>FOPS_Cases</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <type>Lookup</type>
</CustomField>