force-app/main/default/objects/Case/recordTypes/Engagement_Issue.recordType-meta.xml
<RecordType>
    <fullName>Engagement_Issue</fullName>
    <active>true</active>
    <businessProcess>FOPS_Case_Process</businessProcess>
    <label>Engagement Issue</label>
</RecordType>