force-app/main/default/objects/Case/recordTypes/Invoice_Dispute.recordType-meta.xml
<RecordType>
    <fullName>Invoice_Dispute</fullName>
    <active>true</active>
    <businessProcess>FOPS_Case_Process</businessProcess>
    <label>Invoice Dispute</label>
</RecordType>