force-app/main/default/objects/Case/recordTypes/Recruiter_Correspondence.recordType-meta.xml
<RecordType>
    <fullName>Recruiter_Correspondence</fullName>
    <active>true</active>
    <businessProcess>FOPS_Case_Process</businessProcess>
    <label>Recruiter Correspondence</label>
</RecordType>